--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 
   <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/lasagna.html">Lasagna</a>
+    <ul>
+    <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+    <li><a href="./recipes/buffalo-chicken-sandwich.html">Buffalo Chicken Sandwich</a></li>
+    <li><a href="./recipes/pasta.html">Pasta</a></li>
+
+    </ul>
   </body>
