Add return to Homepage button to recipe pages

--- a/recipes/buffalo-chicken-sandwich.html
+++ b/recipes/buffalo-chicken-sandwich.html
@@ -28,5 +28,6 @@
       <li>Shred chicken in the cooker with two forks. Stir in butter;</li>
       <li>Pile shredded chicken and sauce onto hoagie rolls. Serve with remaining Buffalo sauce.</li>
     </ol>
+    <a href="../index.html">Return to Homepage</a>
   </body>
 </html>
