--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -48,5 +48,6 @@
       <li>Place chopped chard in a bowl. Cover with cold water and rinse leaves; any grit will fall to the bottom of the bowl. Transfer chard to a colander to drain briefly; add to soup. Cook and stir until leaves wilt, 2 to 3 minutes;</li>
       <li>Stir in white beans; continue cooking and stirring until pasta is tender, 4 to 5 minutes. Remove from heat and stir in grated cheese. Serve topped with additional grated cheese.</li>
     </ol>
+    <a href="../index.html">Return to Homepage</a>
   </body>
 </html>
