Add an image and a paragraph to the Homepage

--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
   </head>
 
   <body>
-    <h1>Odin Recipes</h1>
+    <h1>Welcome to Odin Recipes</h1>
+    <p>We are the #1 fake website on recipes. Look around and I'm sure you'll find your favorite recipe!</p>
+    <img src="./recipes/homepage-img.jpg" alt="a blank notebook ready to take notes">
+
+    <h3>Recipes</h1>
     <ul>
     <li><a href="./recipes/lasagna.html">Lasagna</a></li>
     <li><a href="./recipes/buffalo-chicken-sandwich.html">Buffalo Chicken Sandwich</a></li>
