--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="utf-8">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="./styles.css"
   </head>
 
-  <body>
+  <body class="center">
     <h1>Welcome to Odin Recipes</h1>
     <p>We are the #1 fake website on recipes. Look around and I'm sure you'll find your favorite recipe!</p>
-    <img src="./recipes/homepage-img.jpg" alt="a blank notebook ready to take notes">
+    <img src="./img/homepage-img.jpg" alt="a blank notebook ready to take notes">
 
-    <h3>Recipes</h1>
+    <h3>Recipes</h3>
     <ul>
     <li><a href="./recipes/lasagna.html">Lasagna</a></li>
     <li><a href="./recipes/buffalo-chicken-sandwich.html">Buffalo Chicken Sandwich</a></li>
     <li><a href="./recipes/pasta.html">Pasta</a></li>
-
     </ul>
   </body>
