--- a/recipes/buffalo-chicken-sandwich.html
+++ b/recipes/buffalo-chicken-sandwich.html
@@ -7,7 +7,7 @@
 
   <body>
     <h1> Buffalo Chicken Sandwich</h1>
-    <img src="./buffalo-sandwich.jpg" alt="a chicken sandwich">
+    <img src="../img/buffalo-sandwich.jpg" alt="a chicken sandwich">
 
     <h3>Description</h3>
     <p>This crockpot Buffalo chicken is great for hearty sandwiches that will please those who love Buffalo chicken wings. This recipe is perfect for those days spent watching football. I like to top these with blue cheese or ranch dressing.</p>
