--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,7 +7,7 @@
 
   <body>
     <h1>Lasagna</h1>
-    <img src="../recipes/lasagna.jpg" alt="a lasagna">
+    <img src="../img/lasagna.jpg" alt="a lasagna">
 
     <h3>Description</h3>
     <p>Lasagna is a type of pasta, possibly one of the oldest types, made of very wide, flat sheets. Either term can also refer to an Italian dish made of stacked layers of lasagna alternating with fillings such as ragù (ground meats and tomato sauce), vegetables, cheeses (which may include ricotta, mozzarella, and parmesan), and seasonings and spices. </p>
