--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -7,7 +7,7 @@
 
   <body>
     <h1>Pasta</h1>
-    <img src="./pasta.jpg" alt="delicious pasta">
+    <img src="../img/pasta.jpg" alt="delicious pasta">
     
     <h3>Description</h3>
     <p>Pasta fazool is classic Italian American comfort food. This recipe works with any sausage, but I like the fennel and anise flavors of sweet Italian sausage with the beans. A hearty soup that's fast and easy to put together.</p>
