Add CSS styles; Add Crazy Chef img to recipe pages

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
   <body class="center">
     <h1>Welcome to Odin Recipes</h1>
-    <p>We are the #1 fake website on recipes. Look around and I'm sure you'll find your favorite recipe!</p>
-    <img src="./img/homepage-img.jpg" alt="a blank notebook ready to take notes">
+    <p class="para_c">We are the #1 fake website on recipes. Look around and I'm sure you'll find your favorite recipe!</p>
+    <img class="img" src="./img/homepage-img.jpg" alt="a blank notebook ready to take notes">
 
     <h3>Recipes</h3>
     <ul>
