--- a/recipes/buffalo-chicken-sandwich.html
+++ b/recipes/buffalo-chicken-sandwich.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="../styles.css"
   </head>
 
-  <body>
+  <body class="center">
     <h1> Buffalo Chicken Sandwich</h1>
-    <img src="../img/buffalo-sandwich.jpg" alt="a chicken sandwich">
+    <img class="img" src="../img/buffalo-sandwich.jpg" alt="a chicken sandwich">
+    <img class="bg-img-small" src="../img/crazychef.jpg" alt="crazy chef making faces to the camera">
 
     <h3>Description</h3>
     <p>This crockpot Buffalo chicken is great for hearty sandwiches that will please those who love Buffalo chicken wings. This recipe is perfect for those days spent watching football. I like to top these with blue cheese or ranch dressing.</p>
