--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="../styles.css"
   </head>
 
-  <body>
+  <body class="center">
     <h1>Lasagna</h1>
-    <img src="../img/lasagna.jpg" alt="a lasagna">
+    <img class="img" src="../img/lasagna.jpg" alt="a lasagna">
+    <img class="bg-img" src="../img/crazychef.jpg" alt="crazy chef making faces to the camera">
 
     <h3>Description</h3>
     <p>Lasagna is a type of pasta, possibly one of the oldest types, made of very wide, flat sheets. Either term can also refer to an Italian dish made of stacked layers of lasagna alternating with fillings such as ragù (ground meats and tomato sauce), vegetables, cheeses (which may include ricotta, mozzarella, and parmesan), and seasonings and spices. </p>
