--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="../styles.css"
   </head>
 
-  <body>
+  <body class="center">
     <h1>Pasta</h1>
-    <img src="../img/pasta.jpg" alt="delicious pasta">
+    <img class="img" src="../img/pasta.jpg" alt="delicious pasta">
+    <img class="bg-img-large" src="../img/crazychef.jpg" alt="crazy chef making faces to the camera">
     
     <h3>Description</h3>
     <p>Pasta fazool is classic Italian American comfort food. This recipe works with any sausage, but I like the fennel and anise flavors of sweet Italian sausage with the beans. A hearty soup that's fast and easy to put together.</p>
