Update CSS and Fix <head> markup

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Odin Recipes</title>
-    <link rel="stylesheet" href="./styles.css"
+    <link rel="stylesheet" href="./styles.css">
   </head>
 
-  <body class="center">
+  <body class="center font">
     <h1>Welcome to Odin Recipes</h1>
     <p class="para_c">We are the #1 fake website on recipes. Look around and I'm sure you'll find your favorite recipe!</p>
     <img class="img" src="./img/homepage-img.jpg" alt="a blank notebook ready to take notes">
